fix video row not completely moving off screen while playing. (firefox)
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@22870 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_course-dashboard.scss
+++ b/src/main/resources/scss/_course-dashboard.scss
@@ -262,7 +262,7 @@
 			}
 		}
 		.video-list {
-			bottom: -80px;
+			bottom: -100px;
 		}
 	}
 }
